# PlotToSat

./: auth.py  config.toml  pyproject.toml
notebooks/sandbox/: 00_sentinel1_basic.ipynb
src/plottosat/: __init__.py  indices.py  maps.py  masks.py  plottosat.py  satellites.py  sentinel1.py  sentinel_one.py  sentinel_two.py  utils.py
tests/: test_config.py  test_maps.py  test_masks.py  test_satellites.py
